appId: com.futureatoms.sticker_officer
---
- launchApp
- assertVisible: "Get Started"
- tapOn: "Get Started"
- waitForAnimationToEnd
- assertVisible: "Feed"
