appId: com.futureatoms.sticker_officer
---
- runFlow: ../utils/navigate_past_onboarding.yaml
- tapOn: "Search"
- waitForAnimationToEnd
- tapOn:
    id: "search_field"
- inputText: "meme"
- waitForAnimationToEnd
